--- a/test.properties
+++ b/test.properties
@@ -1,7 +1,7 @@
 #Contains parameters for the test execution
 #WARNING: This file is usually not pushed to a code repository since it might contain sensitive information like credentials.
 #Make sure this file is ignored by the control version system.
-browser=chrome
+browser=firefox
 baseUrl=https://www.automationexercise.com
 aTestProperty=aTestValue
 defaultTimeout=10
