--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -64,13 +64,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2      
+        uses: actions/checkout@v2  
       - name: Google Auth
         id: auth
         uses: 'google-github-actions/auth@v0'
-         with:
-         credentials_json: '${{ secrets.GCP_CREDENTIALS }}''
-
+        with:
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
       # - name: Google Auth
       #  id: auth
       #  uses: 'google-github-actions/auth@v0'
@@ -86,17 +85,16 @@ jobs:
       # Authenticate Docker to Google Cloud Artifact Registry
       - name: Docker Auth
         id: docker-auth
-        uses:'docker/login-action@v1'
-         with:
-           username: 'oauth2accesstoken'
-           password: '${{ steps.auth.outputs.access_token }}'
-           registry: 'northamerica-northeast2-docker.pkg.dev'
+        uses: 'docker/login-action@v1'
+        with:
+          username: 'oauth2accesstoken'
+          password: '${{ steps.auth.outputs.access_token }}'
+          registry: 'northamerica-northeast2-docker.pkg.dev'
 
       - name: Build and Push Container
         run: |-
-          docker build -t "northamerica-northeast2-docker.pkg.dev/selenium-training-project//selenium-training-project/dockerimage:${{ github.sha }}" ./
+          docker build -t "northamerica-northeast2-docker.pkg.dev/selenium-training-project/selenium-training-project/dockerimage:${{ github.sha }}" ./
           docker push "northamerica-northeast2-docker.pkg.dev/selenium-training-project/selenium-training-project/dockerimage:${{ github.sha }}"
-
       # END - Docker auth and build
 
       - name: Deploy to Cloud Run
