--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -53,6 +53,9 @@ env:
   GAR_LOCATION: northamerica-northeast2 # TODO: update Artifact Registry location
   SERVICE: dockerimage # TODO: update Cloud Run service name
   REGION: us-central1  # TODO: update Cloud Run service region
+  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }} # Docker username secret
+  DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }} # Docker password secret
+
 
 jobs:
   deploy:
@@ -87,8 +90,8 @@ jobs:
         id: docker-auth
         uses: 'docker/login-action@v1'
         with:
-          username: 'oauth2accesstoken'
-          password: '${{ steps.auth.outputs.access_token }}'
+          username:  ${{ env.DOCKER_USERNAME }}
+          password: ${{ env.DOCKER_PASSWORD }}
           registry: 'northamerica-northeast2-docker.pkg.dev'
 
       - name: Build and Push Container
